Fixed a few spacing and sizing issues in hero, cards, and breadcrumb

--- a/src/components/Breadcrumb/Breadcrumb.css
+++ b/src/components/Breadcrumb/Breadcrumb.css
@@ -12,6 +12,17 @@
 
 #text {
     margin: 0;
+    font-size: 21px;
+}
+
+@media screen and (min-width: 768px) {
+    #text {
+        font-size: 3vw;
+    }
+
+    .btn-primary {
+        font-size: 2.5vw;
+    }
 }
 
 .btn-primary {
@@ -20,6 +31,8 @@
     color: black;
     animation-duration: .2s;
     margin: 0;
+    padding: 2vw 3vw 2vw 3vw;
+    font-size: 18px;
 }
 
 .btn-primary:hover {
