--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -2,7 +2,7 @@ img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .display {
@@ -29,12 +29,13 @@ img {
 
 #outer {
     margin: 0;
-    width: 100%;
-    height: 100vh;
 }
 
 #outer-row {
     margin: 0;
+    height: 50vh;
+    width: 100%;
+
 }
 
 #intro-container {
@@ -50,6 +51,7 @@ img {
 
 #mask {
     padding: 20px;
+    border-radius: 20px;
 
     background-color: rgba(42,60,44,0.5);
 }
