--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -30,6 +30,11 @@
 }
 
 @media screen and (min-width: 768px) {
+
+    .row {
+        height: 30vh;
+    }
+
     #test {
         padding: 0px 25px 0px 25px;
     }
